Added meta data facility